fixed readable text

--- a/css/home.css
+++ b/css/home.css
@@ -209,7 +209,9 @@
     
     #footer {
         margin-top: 30px;
-        height: 70px;
+        height: 100px;
+        padding-top: 5px;
+        padding-bottom: 30px;
         background-color: green;
         font-family: 'Alegreya', serif;
         color: white;
@@ -228,20 +230,19 @@
     }
     
     #footer h3 {
-        font-size: 1.8 em;
+        font-size: 2em;
         margin-bottom: 0;
     }
     
     #body {
-        padding-bottom: 100px;
-        /* Height of the footer */
+        padding-bottom: 150px;
     }
     
     footer p {
         margin: 0;
         padding: 0;
         border: 0;
-        font-size: 1.2em;
+        font-size: 1.8em;
     }
     
     #content {
